# telegram-bot-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  mock_data.csv  pyproject.toml
scripts/: encode_credentials.py
src/: __init__.py  data_analyzer.py  google_sheets_client.py  llm_processor.py
