[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-analytics"
version = "1.0.0"
description = "Анализ заявок из Telegram бота с интеграцией Google Sheets и LLM"
authors = [{name = "script-logic", email = "dev.scriptlogic@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.108.0",
    "openai>=1.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.0",
    "mypy>=1.15.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[project.urls]
"Homepage" = "https://github.com/script-logic/telegram-bot-analytics"
"Bug Tracker" = "https://github.com/script-logic/telegram-bot-analytics/issues"